# Beezer

./: .gitignore  .hgignore  README.md
Source/: CMakeLists.txt  License.txt  astylerc
Source/AppUtils/: AppUtils.cpp  AppUtils.h
Source/ArchiveEntry/: ArchiveEntry.cpp  ArchiveEntry.h
Source/Archiver/: Archiver.cpp  Archiver.h  _Archiver.cs  _Archiver.proj  _Archiver_Zeta.proj
Source/ArjArchiver/: ArjArchiver.cpp  ArjArchiver.h  ArjStrings.h  CMakeLists.txt  _ArjArchiver.cs  _ArjArchiver.proj  ark_arj
Source/BZipArchiver/: BZipArchiver.cpp  BZipArchiver.h  BZipStrings.h  CMakeLists.txt  _BZipArchiver.cs  _BZipArchiver.proj  ark_bzip2
Source/Beezer/: AboutWindow.cpp  AboutWindow.h  AddOnWindow.cpp  AddOnWindow.h  AppConstants.h  ArchiveRep.cpp  ArchiveRep.h  ArchiverMgr.cpp  ArchiverMgr.h  ArkInfoWindow.cpp  ArkInfoWindow.h  AuthorWindow.cpp  AuthorWindow.h  BarberPole.cpp  BarberPole.h  Beezer  Beezer.cpp  Beezer.h  Beezer.rdef  Beezer.rsrc  BeezerListView.cpp  BeezerListView.h  BeezerStringView.cpp  BeezerStringView.h  BevelView.cpp  BevelView.h  BitmapMenuItem.cpp  BitmapMenuItem.h  BitmapPool.cpp  BitmapPool.h  CMakeLists.txt  CommentWindow.cpp  CommentWindow.h  ImageButton.cpp  ImageButton.h  InfoBar.cpp  InfoBar.h  InputAlert.cpp  InputAlert.h  LangStrings.cpp  (+63 more)
Source/Beezer/FSUtils/: FSUtils.cpp  FSUtils.h  _FSUtils.cs  _FSUtils.proj  _FSUtils_Zeta.proj
Source/Beezer/FileJoiner/: FileJoinerWindow.cpp  FileJoinerWindow.h  Joiner.cpp  Joiner.h  _JoinerLib.cs  _JoinerLib.proj
Source/Beezer/FileJoinerStub/: FileJoinerStub.rsrc  JoinerStrings.cpp  JoinerStrings.h  JoinerStub  JoinerStub.cpp  JoinerStub.h  JoinerWindow.cpp  JoinerWindow.h  _ full_recompile_for_zeta.txt  _FileJoinerStub.cs  _FileJoinerStub.proj
Source/Beezer/FileSplitter/: FileSplitterWindow.cpp  FileSplitterWindow.h
Source/Beezer/RegExString/: License.txt  RegExString.cpp  RegExString.h  RegExp.cpp  RegExp.h
Source/Beezer/Scripts/: remove_beezer_o.sh
Source/Beezer/SplitPane/: Credits.txt  Disclaimer.txt  SplitPane.cpp  SplitPane.h
Source/Beezer/TrackerAddOn/: Beezer  CMakeLists.txt  Drop Beezer here  TrackerAddOn.cpp  TrackerAddOn.rdef  TrackerAddon.rsrc  _TrackerAddOn.proj
Source/Beezer/URLView/: Disclaimer.txt  License.txt  URLView.cpp  URLView.h
Source/Beezer/add-ons/: ark_7zip  ark_arj  ark_bzip2  ark_gzip  ark_lha  ark_rar  ark_tar  ark_zip
Source/Beezer/docs/: 7ZipSettings.html  AddingFiles.html  AddonsWorkers.html  ArchiveInfo.html  ArchiveWindow.html  ArjSettings.html  Bzip2Settings.html  CompileTimestamp.html  Contact.html  Conventions.html  CreatingArchives.html  CreatingFolders.html  Credits.html  DeletingArchives.html  DeletingFiles.html  EditingComments.html  ExtractingArchives.html  Features.html  Index.html  (+21 more)
Source/BubbleHelper-1.2/: BubbleHelper.cpp  BubbleHelper.h
Source/CMakeModules/: UseHaiku.cmake
Source/ColumnListView/: CLVLicense.txt  CMakeLists.txt  Colors.h  Disclaimer.txt  _libCLV.cs  _libCLV.proj  libCLV.so.dbg  libCLV.txt
Source/GZipArchiver/: CMakeLists.txt  GZipArchiver.cpp  GZipArchiver.h  GZipStrings.h  _GZipArchiver.cs  _GZipArchiver.proj
Source/HashTable/: HashTable.cpp  HashTable.h
Source/LhaArchiver/: CMakeLists.txt  LhaArchiver.cpp  LhaArchiver.h  LhaStrings.h  _LhaArchiver.cs  _LhaArchiver.proj
Source/ListEntry/: ListEntry.cpp  ListEntry.h
Source/PipeMgr/: PipeMgr.cpp  PipeMgr.h
Source/RarArchiver/: CMakeLists.txt  MultiPartOutput  RarArchiver.cpp  RarArchiver.h  RarStrings.h  _RarArchiver.cs  _RarArchiver.proj
Source/Shared/: Shared.h
Source/TarArchiver/: CMakeLists.txt  TarArchiver.cpp  TarArchiver.h  _TarArchiver.cs  _TarArchiver.proj  _TarArchiverLib.cs  _TarArchiverLib.proj
Source/XzArchiver/: CMakeLists.txt  XzArchiver.cpp  XzArchiver.h  XzStrings.h
Source/ZipArchiver/: CMakeLists.txt  ZipArchiver.cpp  ZipArchiver.h  ZipStrings.h  _ZipArchiver.cs  _ZipArchiver.proj
Source/_Deprecated/: AboutWindow.cpp  AboutWindow.h
Source/z7Archiver/: 7zip  CMakeLists.txt  _z7Archiver.cs  _z7Archiver.proj  z7Archiver.cpp  z7Archiver.cpp-  z7Archiver.h  z7Strings.h
(+150 files in other folders)
